@@ -46,19 +46,25 @@ class participant_status_report extends \cenozo\ui\pull\base_report
 
     // get the report arguments
     $db_qnaire = lib::create( 'database\qnaire', $this->get_argument( 'restrict_qnaire_id' ) );
-    $restrict_by_site = $this->get_argument( 'restrict_site_or_province' ) == 'Site' ? true : false;
+    $breakdown = $this->get_argument( 'breakdown' );
     $restrict_source_id = $this->get_argument( 'restrict_source_id' );
 
     $this->add_title( 
       sprintf( 'Listing of categorical totals pertaining to '.
                'the %s interview', $db_qnaire->name ) ) ;
 
+    $quota_breakdown = $this->get_argument( 'quota_breakdown' );
+    $restrict_province_id = $this->get_argument( 'restrict_province_id' );
     $restrict_start_date = $this->get_argument( 'restrict_start_date' );
     $restrict_end_date = $this->get_argument( 'restrict_end_date' );
     $now_datetime_obj = util::get_datetime_object();
     $start_datetime_obj = NULL;
     $end_datetime_obj = NULL;
     
+    if( $restrict_province_id )
+      $this->add_title(
+        'Restricted to '.lib::create( 'database\region', $restrict_province_id )->name );
+
     if( $restrict_start_date )
     {
       $start_datetime_obj = util::get_datetime_object( $restrict_start_date );
@@ -78,7 +84,7 @@ class participant_status_report extends \cenozo\ui\pull\base_report
       $end_datetime_obj = clone $temp_datetime_obj;
     }
 
-    $locale_totals = array(
+    $category_totals = array(
       'Completed interview - Consent not received' => 0,
       'Completed interview - Consent received' => 0,
       'Completed interview - No consent information' => 0,
@@ -91,12 +97,12 @@ class participant_status_report extends \cenozo\ui\pull\base_report
       'Sourcing Required' => 0 );
       
     // add call results
-    $phone_call_status_start_index = count( $locale_totals ) - 1; // includes "sourcing required" above
+    $phone_call_status_start_index = count( $category_totals ) - 1; // includes "sourcing required" above
     foreach( $phone_call_class_name::get_enum_values( 'status' ) as $status )
-      $locale_totals[ ucfirst( $status ) ] = 0;
-    $phone_call_status_count = count( $locale_totals ) - $phone_call_status_start_index;
+      $category_totals[ ucfirst( $status ) ] = 0;
+    $phone_call_status_count = count( $category_totals ) - $phone_call_status_start_index;
 
-    $locale_totals = array_merge( $locale_totals, array(
+    $category_totals = array_merge( $category_totals, array(
       'Not yet called' => 0,
       'Deceased' => 0,
       'Permanent condition (excl. deceased)' => 0,
@@ -109,33 +115,49 @@ class participant_status_report extends \cenozo\ui\pull\base_report
 
     // insert a blank line before Total number of calls
     $blank = array();
-    $blank[] = count( $locale_totals ) - 3;
+    $blank[] = count( $category_totals ) - 3;
 
-    $locale_totals_list = array();
-    if( $restrict_by_site )
+    $category_totals_list = array();
+    if( 'Site' == $breakdown )
     {
       $site_mod = lib::create( 'database\modifier' );
       if( $is_supervisor )
         $site_mod->where( 'id', '=', $session->get_site()->id );
       foreach( $site_class_name::select( $site_mod ) as $db_site )
-        $locale_totals_list[ $db_site->name ] = $locale_totals; 
+        $category_totals_list[ $db_site->name ] = $category_totals; 
+
+      // only include the "None" column if user isn't a supervisor
+      if( !$is_supervisor ) $category_totals_list[ 'None' ] = $category_totals;
     }
-    else
+    else if( 'Province' == $breakdown )
     {
       $region_mod = lib::create( 'database\modifier' );
       $region_mod->order( 'abbreviation' );
       $region_mod->where( 'country', '=', 'Canada' );
       if( $is_supervisor )
         $region_mod->where( 'site_id', '=', $session->get_site()->id );
-      foreach( $region_class_name::select($region_mod) as $db_region )
-        $locale_totals_list[ $db_region->abbreviation ] = $locale_totals; 
-    }
+      foreach( $region_class_name::select( $region_mod ) as $db_region )
+        $category_totals_list[ $db_region->abbreviation ] = $category_totals; 
 
-    // only include the "None" column if user isn't a supervisor
-    if( !$is_supervisor ) $locale_totals_list[ 'None' ] = $locale_totals;
+      // only include the "None" column if user isn't a supervisor and province isn't restricted
+      if( !$is_supervisor && !$restrict_province_id )
+        $category_totals_list[ 'None' ] = $category_totals;
+    }
+    else if( 'Quota' == $breakdown )
+    {
+      $age_group_class_name = lib::get_class_name( 'database\age_group' );
+      $age_group_mod = lib::create( 'database\modifier' );
+      $age_group_mod->order( 'lower' );
+      foreach( $age_group_class_name::select( $age_group_mod ) as $db_age_group )
+      {
+        $category_totals_list[ 'M'.$db_age_group->lower ] = $category_totals;
+        $category_totals_list[ 'F'.$db_age_group->lower ] = $category_totals;
+      }
+    }
 
     $participant_mod = lib::create( 'database\modifier' );
     if( $is_supervisor ) $participant_mod->where( 'site_id', '=', $session->get_site()->id );
+    if( $restrict_province_id ) $participant_mod->where( 'address.region_id', '=', $restrict_province_id );
     if( 0 < $restrict_source_id ) $participant_mod->where( 'source_id', '=', $restrict_source_id );
     if( $restrict_start_date )
       $participant_mod->where(
@@ -146,20 +168,26 @@ class participant_status_report extends \cenozo\ui\pull\base_report
     $participant_list = $participant_class_name::select( $participant_mod );
     foreach( $participant_list as $db_participant )
     {
-      $db_site = NULL;
-      if( $restrict_by_site )
+      $db_site = $db_participant->get_primary_site();
+
+      if( 'Site' == $breakdown )
       {
-        $db_site = $db_participant->get_primary_site();
-        $locale = is_null( $db_site )
+        $category = is_null( $db_site )
                 ? 'None'
                 : $db_participant->get_primary_site()->name;
       }
-      else
+      else if( 'Province' == $breakdown )
       {
         $db_address = $db_participant->get_primary_address();
-        $locale = is_null( $db_address )
+        $category = is_null( $db_address )
                 ? 'None'
                 : $db_address->get_region()->abbreviation;
+      }
+      else if( 'Quota' == $breakdown )
+      {
+        $category = sprintf( '%s%s',
+          'female' == $db_participant->gender ? 'F' : 'M',
+          $db_participant->get_age_group()->lower );
       }
 
       // get the maximum number of failed calls before sourcing is required
@@ -167,20 +195,20 @@ class participant_status_report extends \cenozo\ui\pull\base_report
         'calling', 'max failed calls', $db_site );
 
       // don't include the "None" column if a supervisor is running the report
-      if( $is_supervisor && 'None' == $locale ) continue;
+      if( $is_supervisor && 'None' == $category ) continue;
 
       $phone_call_mod = lib::create( 'database\modifier' );
       $phone_call_mod->where( 'participant.id', '=', $db_participant->id );
-      $locale_totals_list[ $locale ][ 'Total number of calls' ] +=
+      $category_totals_list[ $category ][ 'Total number of calls' ] +=
         $phone_call_class_name::count( $phone_call_mod );
 
       if( 'deceased' == $db_participant->status )
       {
-        $locale_totals_list[ $locale ][ 'Deceased' ]++;
+        $category_totals_list[ $category ][ 'Deceased' ]++;
       }
       else if( !is_null( $db_participant->status ) )
       {
-        $locale_totals_list[ $locale ][ 'Permanent condition (excl. deceased)' ]++;    
+        $category_totals_list[ $category ][ 'Permanent condition (excl. deceased)' ]++;    
       }
       else
       {
@@ -193,13 +221,13 @@ class participant_status_report extends \cenozo\ui\pull\base_report
         {
           if( 'missed' == $db_appointment->get_state() )
           {
-            $locale_totals_list[ $locale ][ 'Appointment (missed)' ]++;
+            $category_totals_list[ $category ][ 'Appointment (missed)' ]++;
             $has_appointment = true;
             break;
           }
           else
           {
-            $locale_totals_list[ $locale ][ 'Appointment' ]++;
+            $category_totals_list[ $category ][ 'Appointment' ]++;
             $has_appointment = true;
             break;
           }
@@ -214,15 +242,15 @@ class participant_status_report extends \cenozo\ui\pull\base_report
         $db_consent = $db_participant->get_last_consent();
         if( !is_null( $db_consent ) && 'retract' == $db_consent->event )
         {
-          $locale_totals_list[ $locale ][ 'Retracted from study' ]++;
+          $category_totals_list[ $category ][ 'Retracted from study' ]++;
         }
         else if( !is_null( $db_consent ) && 'withdraw' == $db_consent->event )
         {
-          $locale_totals_list[ $locale ][ 'Withdrawn from study' ]++;
+          $category_totals_list[ $category ][ 'Withdrawn from study' ]++;
         }
         else if( 0 == count( $interview_list ) )
         {
-          $locale_totals_list[ $locale ][ 'Not yet called' ]++;
+          $category_totals_list[ $category ][ 'Not yet called' ]++;
         }
         else
         {
@@ -231,30 +259,30 @@ class participant_status_report extends \cenozo\ui\pull\base_report
           {
             if( is_null( $db_consent ) )
             {
-              $locale_totals_list[ $locale ][ 'Completed interview - No consent information' ]++;
+              $category_totals_list[ $category ][ 'Completed interview - No consent information' ]++;
             }
             else if( 'written accept' == $db_consent->event )
             {
-              $locale_totals_list[ $locale ][ 'Completed interview - Consent received' ]++;
+              $category_totals_list[ $category ][ 'Completed interview - Consent received' ]++;
             }
             else if( 'verbal deny'   == $db_consent->event ||
                      'verbal accept' == $db_consent->event ||
                      'written deny'  == $db_consent->event )
             {
-              $locale_totals_list[ $locale ][ 'Completed interview - Consent not received' ]++;
+              $category_totals_list[ $category ][ 'Completed interview - Consent not received' ]++;
             }
           }
           else if( !is_null( $db_consent ) &&
                    ( 'verbal deny'  == $db_consent->event ||
                      'written deny' == $db_consent->event ) )
           {
-            $locale_totals_list[ $locale ][ 'Hard refusal' ]++;
+            $category_totals_list[ $category ][ 'Hard refusal' ]++;
           }
           else 
           {
             if( $max_failed_calls <= $db_interview->get_failed_call_count() )
             {
-              $locale_totals_list[ $locale ][ 'Sourcing Required' ]++;
+              $category_totals_list[ $category ][ 'Sourcing Required' ]++;
             }
             else
             {              
@@ -274,7 +302,7 @@ class participant_status_report extends \cenozo\ui\pull\base_report
                 $phone_call_mod->limit( 1 );
                 $db_phone_call = current( $db_assignment->get_phone_call_list( $phone_call_mod ) );
                 if( $db_phone_call )
-                  $locale_totals_list[ $locale ][ ucfirst( $db_phone_call->status ) ]++;
+                  $category_totals_list[ $category ][ ucfirst( $db_phone_call->status ) ]++;
               }
             }  
           }// end interview not completed
@@ -285,73 +313,73 @@ class participant_status_report extends \cenozo\ui\pull\base_report
     $header = array( 'Current Outcome' );
    
     //calculate a grand total column if we have more than one totals column
-    if( 1 < count( $locale_totals_list ) )
-      $locale_totals_list[ 'Grand Total' ] = $locale_totals;
+    if( 1 < count( $category_totals_list ) )
+      $category_totals_list[ 'Grand Total' ] = $category_totals;
 
-    foreach( $locale_totals_list as $locale => $totals )
+    foreach( $category_totals_list as $category => $totals )
     {
-      $header[] = $locale;
-      if( 'Grand Total' != $locale )
+      $header[] = $category;
+      if( 'Grand Total' != $category )
       {
-        $locale_totals_list[ $locale ][ 'Grand Total Attempted' ] = 
+        $category_totals_list[ $category ][ 'Grand Total Attempted' ] = 
           array_sum( array_slice(
             $totals, $phone_call_status_start_index, $phone_call_status_count ) );
 
         $tci = array_sum( array_slice( $totals, 0, 4 ) );
 
-        $locale_totals_list[ $locale ][ 'Total completed interviews' ] = $tci;
+        $category_totals_list[ $category ][ 'Total completed interviews' ] = $tci;
         $denom = $tci + $totals[ 'Hard refusal' ] 
                       + $totals[ 'Soft refusal' ] 
                       + $totals[ 'Withdrawn from study' ];
 
-        $locale_totals_list[ $locale ][ 'Response rate (incl. soft refusals)' ] =  
+        $category_totals_list[ $category ][ 'Response rate (incl. soft refusals)' ] =  
           $denom ? sprintf( '%0.2f', $tci / $denom ) : 'NA';
                   
         $denom = $tci + $totals[ 'Withdrawn from study' ] 
                       + $totals[ 'Hard refusal' ];
 
-        $locale_totals_list[ $locale ][ 'Response rate (excl. soft refusals)' ] = 
+        $category_totals_list[ $category ][ 'Response rate (excl. soft refusals)' ] = 
           $denom ? sprintf( '%0.2f', $tci / $denom ) : 'NA';
 
-        if( array_key_exists( 'Grand Total', $locale_totals_list ) )
+        if( array_key_exists( 'Grand Total', $category_totals_list ) )
           foreach( array_keys( $totals ) as $column )
-            $locale_totals_list[ 'Grand Total' ][ $column ] +=
-              $locale_totals_list[ $locale ][ $column ];
+            $category_totals_list[ 'Grand Total' ][ $column ] +=
+              $category_totals_list[ $category ][ $column ];
         
-        $tc = $locale_totals_list[ $locale ][ 'Total number of calls' ];
-        $locale_totals_list[ $locale ][ 'Completed interviews / total number of calls' ] =
+        $tc = $category_totals_list[ $category ][ 'Total number of calls' ];
+        $category_totals_list[ $category ][ 'Completed interviews / total number of calls' ] =
           0 < $tc ? sprintf( '%0.2f', $tci / $tc ) : 'NA';
       }
     }
 
-    if( array_key_exists( 'Grand Total', $locale_totals_list ) )
+    if( array_key_exists( 'Grand Total', $category_totals_list ) )
     {
-      $gtci = $locale_totals_list[ 'Grand Total' ][ 'Total completed interviews' ];
+      $gtci = $category_totals_list[ 'Grand Total' ][ 'Total completed interviews' ];
 
       $denom =
             $gtci + 
-            $locale_totals_list[ 'Grand Total' ][ 'Hard refusal' ] + 
-            $locale_totals_list[ 'Grand Total' ][ 'Soft refusal' ];
+            $category_totals_list[ 'Grand Total' ][ 'Hard refusal' ] + 
+            $category_totals_list[ 'Grand Total' ][ 'Soft refusal' ];
 
-      $locale_totals_list[ 'Grand Total' ][ 'Response rate (incl. soft refusals)' ] = 
+      $category_totals_list[ 'Grand Total' ][ 'Response rate (incl. soft refusals)' ] = 
         $denom ? sprintf( '%0.2f', $gtci / $denom ) : 'NA';
 
       $denom = 
             $gtci + 
-            $locale_totals_list[ 'Grand Total' ][ 'Withdrawn from study' ] + 
-            $locale_totals_list[ 'Grand Total' ][ 'Hard refusal' ];
+            $category_totals_list[ 'Grand Total' ][ 'Withdrawn from study' ] + 
+            $category_totals_list[ 'Grand Total' ][ 'Hard refusal' ];
 
-      $locale_totals_list[ 'Grand Total' ][ 'Response rate (excl. soft refusals)' ] = 
+      $category_totals_list[ 'Grand Total' ][ 'Response rate (excl. soft refusals)' ] = 
         $denom ? sprintf( '%0.2f', $gtci / $denom ) : 'NA';
       
-      $gtc = $locale_totals_list[ 'Grand Total' ][ 'Total number of calls' ];
-      $locale_totals_list[ 'Grand Total' ][ 'Completed interviews / total number of calls' ] =
+      $gtc = $category_totals_list[ 'Grand Total' ][ 'Total number of calls' ];
+      $category_totals_list[ 'Grand Total' ][ 'Completed interviews / total number of calls' ] =
         0 < $gtc ? sprintf( '%0.2f', $gtci / $gtc ) : 'NA';
     }
 
     // build the final 2D content array
-    $temp_content = array( array_keys( $locale_totals ) );
-    foreach( $locale_totals_list as $totals ) $temp_content[] = array_values( $totals );
+    $temp_content = array( array_keys( $category_totals ) );
+    foreach( $category_totals_list as $totals ) $temp_content[] = array_values( $totals );
 
     // transpose from column-wise to row-wise
     $content = array();
